# admin-web/src/api/generated/openapi.json
@@ -1824,6 +1824,18 @@
             }
           },
           {
+            "name": "sortDir",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "enum": [
+                "asc",
+                "desc"
+              ]
+            }
+          },
+          {
             "name": "page",
             "in": "query",
             "required": false,
